DigicielFull/force-app/main/default/objects/Service_Delivery_Updates__c/fields/Customer_Dependencies__c.field-meta.xml
<CustomField>
    <fullName>Customer_Dependencies__c</fullName>
    <inlineHelpText>Used to highlight customer dependencies on completing the customer order</inlineHelpText>
    <label>Customer Dependencies</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>