DigicielFull/force-app/main/default/objects/Service_Delivery_Updates__c/fields/Customer_Update__c.field-meta.xml
<CustomField>
    <fullName>Customer_Update__c</fullName>
    <inlineHelpText>Used to pull a report to give the customer an update.  Ensure your spelling and grammar are correct</inlineHelpText>
    <label>Customer Update</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>