DigicielFull/force-app/main/default/objects/Service_Delivery_Updates__c/fields/Equipment__c.field-meta.xml
<CustomField>
    <fullName>Equipment__c</fullName>
    <label>Equipment</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>