DigicielFull/force-app/main/default/objects/Service_Delivery_Updates__c/fields/ICT_BB_Project__c.field-meta.xml
<CustomField>
    <fullName>ICT_BB_Project__c</fullName>
    <formula>Service_Request__r.ICT_BB_Project__c</formula>
    <label>ICT BB Project</label>
    <type>Text</type>
</CustomField>