DigicielFull/force-app/main/default/objects/Service_Delivery_Updates__c/fields/Internal_Update__c.field-meta.xml
<CustomField>
    <fullName>Internal_Update__c</fullName>
    <inlineHelpText>Used for internal updates only</inlineHelpText>
    <label>Internal Update</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>