DigicielFull/force-app/main/default/objects/Service_Delivery_Updates__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Service Delivery Updates</relationshipLabel>
    <relationshipName>Service_Delivery_Updates</relationshipName>
    <type>Lookup</type>
</CustomField>