DigicielFull/force-app/main/default/objects/Service_Delivery_Updates__c/fields/Opportunity_Owner_Look_Up__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_Look_Up__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Owner Look Up</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Delivery_Updates</relationshipName>
    <type>Lookup</type>
</CustomField>