DigicielFull/force-app/main/default/objects/Service_Delivery_Updates__c/fields/Service_Delivery_Update_Key__c.field-meta.xml
<CustomField>
    <fullName>Service_Delivery_Update_Key__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Delivery Update Key</label>
    <type>Text</type>
</CustomField>