DigicielFull/force-app/main/default/objects/Service_Delivery_Updates__c/fields/Service_Request__c.field-meta.xml
<CustomField>
    <fullName>Service_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Request</label>
    <referenceTo>Service_Request__c</referenceTo>
    <relationshipLabel>Service Delivery Updates</relationshipLabel>
    <relationshipName>Service_Delivery_Updates</relationshipName>
    <type>Lookup</type>
</CustomField>