DigicielFull/force-app/main/default/objects/Service_Delivery_Updates__c/fields/Site_readiness__c.field-meta.xml
<CustomField>
    <fullName>Site_readiness__c</fullName>
    <label>Site readiness</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>