DigicielFull/force-app/main/default/objects/Service_Delivery_Updates__c/fields/WAN_LAN_Survey_Status__c.field-meta.xml
<CustomField>
    <fullName>WAN_LAN_Survey_Status__c</fullName>
    <label>WAN/LAN Survey Status</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>