DigicielFull/force-app/main/default/objects/Service_Delivery_Updates__c/recordTypes/Curacao_Service_Delivery_Update.recordType-meta.xml
<RecordType>
    <fullName>Curacao_Service_Delivery_Update</fullName>
    <active>false</active>
    <label>Curacao Service Delivery Update</label>
</RecordType>