DigicielFull/force-app/main/default/objects/Service_Delivery_Updates__c/recordTypes/El_Salvador_Service_Delivery_Update.recordType-meta.xml
<RecordType>
    <fullName>El_Salvador_Service_Delivery_Update</fullName>
    <active>false</active>
    <label>El Salvador Service Delivery Update</label>
</RecordType>