DigicielFull/force-app/main/default/objects/Service_Delivery_Updates__c/recordTypes/Guadeloupe_Service_Delivery_Update.recordType-meta.xml
<RecordType>
    <fullName>Guadeloupe_Service_Delivery_Update</fullName>
    <active>true</active>
    <label>Guadeloupe Service Delivery Update</label>
</RecordType>