DigicielFull/force-app/main/default/objects/Service_Delivery_Updates__c/recordTypes/ICT_Barbados.recordType-meta.xml
<RecordType>
    <fullName>ICT_Barbados</fullName>
    <active>true</active>
    <label>ICT Barbados</label>
</RecordType>