DigicielFull/force-app/main/default/objects/Service_Delivery_Updates__c/recordTypes/Jamaica_Service_Delivery_Update.recordType-meta.xml
<RecordType>
    <fullName>Jamaica_Service_Delivery_Update</fullName>
    <active>true</active>
    <label>Jamaica Service Delivery Update</label>
</RecordType>