DigicielFull/force-app/main/default/objects/Service_Delivery_Updates__c/recordTypes/Martinique_Service_Delivery_Update.recordType-meta.xml
<RecordType>
    <fullName>Martinique_Service_Delivery_Update</fullName>
    <active>true</active>
    <label>Martinique Service Delivery Update</label>
</RecordType>