DigicielFull/force-app/main/default/objects/Service_Delivery_Updates__c/recordTypes/SLU_Service_Delivery_Update.recordType-meta.xml
<RecordType>
    <fullName>SLU_Service_Delivery_Update</fullName>
    <active>false</active>
    <label>SLU Service Delivery Update</label>
</RecordType>