DigicielFull/force-app/main/default/objects/Service_Delivery_Updates__c/recordTypes/Trinidad_Service_Delivery_Update.recordType-meta.xml
<RecordType>
    <fullName>Trinidad_Service_Delivery_Update</fullName>
    <active>true</active>
    <label>Trinidad Service Delivery Update</label>
</RecordType>