DigicielFull/force-app/main/default/objects/Service_Delivery_Updates__c/listViews/Dominica_Service_Request_Queue_Service_Delivery_Updates.listView-meta.xml
<ListView>
    <fullName>Dominica_Service_Request_Queue_Service_Delivery_Updates</fullName>
    <filterScope>Queue</filterScope>
    <label>Dominica Service Request Queue</label>
    <queue>Dominica_Service_Request_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>