DigicielFull/force-app/main/default/objects/Service_Delivery_Updates__c/listViews/El_Salvador_Service_Delivery_Team_Service_Delivery_Updates.listView-meta.xml
<ListView>
    <fullName>El_Salvador_Service_Delivery_Team_Service_Delivery_Updates</fullName>
    <filterScope>Queue</filterScope>
    <label>El Salvador Service Delivery Team</label>
    <language>en_US</language>
    <queue>El_Salvador_Service_Delivery_Team</queue>
    <sharedTo>
        <group>El_Salvador_Pre_Sales_Sharing</group>
        <group>El_Salvador_Service_Delivery_Sharing</group>
        <role>El_Salvador</role>
        <role>El_Salvador_Head_of_Pre_Sales_Service_Delivery</role>
        <role>El_Salvador_Pre_Sales_Engineer</role>
        <role>El_Salvador_Sales_Manager_1</role>
        <role>El_Salvador_Sales_Team_1</role>
        <role>El_Salvador_Service_Delivery</role>
    </sharedTo>
</ListView>