DigicielFull/force-app/main/default/objects/Service_Delivery_Updates__c/listViews/Group_Service_Delivery_Service_Delivery_Updates.listView-meta.xml
<ListView>
    <fullName>Group_Service_Delivery_Service_Delivery_Updates</fullName>
    <filterScope>Queue</filterScope>
    <label>Group Service Delivery</label>
    <queue>Group_Service_Delivery</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>