DigicielFull/force-app/main/default/objects/Service_Delivery_Updates__c/listViews/ICT_BB_Service_Delivery_Updates.listView-meta.xml
<ListView>
    <fullName>ICT_BB_Service_Delivery_Updates</fullName>
    <columns>NAME</columns>
    <columns>Internal_Update__c</columns>
    <columns>Customer_Update__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Service_Delivery_Updates__c.ICT_Barbados</value>
    </filters>
    <label>ICT BB Service Delivery Updates</label>
    <language>en_US</language>
    <sharedTo>
        <group>Barbados_ICT_Admin_Team</group>
        <group>ICT_BB_GOB_Project_PM</group>
        <group>ICT_BB_Order_Processing_Team</group>
        <group>ICT_BB_SME_Team</group>
        <group>ICT_BB_SME_Team_Ex_Manager</group>
        <group>ICT_BB_Sales_Team</group>
        <group>ICT_Barbados_Account_Managers_All</group>
        <group>ICT_Barbados_Sales_Managers</group>
        <group>ICT_Barbados_Service_Delivery_Team</group>
        <group>ICT_Barbados_Technical</group>
        <role>Chairman_s_Committee</role>
    </sharedTo>
</ListView>