DigicielFull/force-app/main/default/objects/Service_Delivery_Updates__c/listViews/ICT_BB_Service_Delivery_Updates_This_Wee.listView-meta.xml
<ListView>
    <fullName>ICT_BB_Service_Delivery_Updates_This_Wee</fullName>
    <columns>NAME</columns>
    <columns>Internal_Update__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>ICT_BB_Project__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Service_Delivery_Updates__c.ICT_Barbados</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>ICT BB Service Delivery Updates This Wee</label>
    <language>en_US</language>
    <sharedTo>
        <group>Barbados_ICT_Admin_Team</group>
        <group>Barbados_Power_Users</group>
        <group>ICT_Barbados_Account_Managers_All</group>
        <group>ICT_Barbados_Sales_Managers</group>
        <group>ICT_Barbados_Service_Delivery_Team</group>
        <group>ICT_Barbados_Technical</group>
        <role>Chairman_s_Committee</role>
    </sharedTo>
</ListView>