DigicielFull/force-app/main/default/objects/Service_Delivery_Updates__c/listViews/Panama_Service_Request_Service_Delivery_Updates.listView-meta.xml
<ListView>
    <fullName>Panama_Service_Request_Service_Delivery_Updates</fullName>
    <filterScope>Queue</filterScope>
    <label>Panama Service Request</label>
    <queue>Panama_Service_Request</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>