DigicielFull/force-app/main/default/objects/Service_Delivery_Updates__c/listViews/PNG_Service_Delivery_Team_Service_Delivery_Updates.listView-meta.xml
<ListView>
    <fullName>PNG_Service_Delivery_Team_Service_Delivery_Updates</fullName>
    <filterScope>Queue</filterScope>
    <label>PNG Service Delivery Team</label>
    <queue>PNG_Service_Delivery_Team</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>