DigicielFull/force-app/main/default/objects/Service_Delivery_Updates__c/listViews/Solution_Architect_Service_Delivery_Updates.listView-meta.xml
<ListView>
    <fullName>Solution_Architect_Service_Delivery_Updates</fullName>
    <filterScope>Queue</filterScope>
    <label>Solution Architect</label>
    <queue>Solution_Architect</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>